--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SteamaTipAi">
+            android:theme="@style/Theme.SteamaTipAi"
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:stateNotNeeded="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
